# allennlp-dataframe-mapper

./: README.md  pyproject.toml
.github/workflows/: master.yml  python-package.yml  release.yml
allennlp_dataframe_mapper/: __init__.py  mapper.py
allennlp_dataframe_mapper/common/testing/: __init__.py  test_case.py
allennlp_dataframe_mapper/transforms/: __init__.py  base.py  flatten.py  hash_name.py  logarithmer.py  preprocessing.py
test/mapper/: mapper_test.py
test/transforms/: base_test.py
test_fixtures/mapper/: mapper_iris.jsonnet  mapper_wine.jsonnet
test_fixtures/transforms/hash_name/: hash_name.jsonnet
test_fixtures/transforms/preprocessing/: flatten.jsonnet  label_encoder.jsonnet  logarithmer.jsonnet  min_max_scalar.jsonnet  standard_scalar.jsonnet
tests/mapper/: mapper_test.py
tests/transforms/: base_test.py  hash_name_test.py  preprocessing_test.py
