[tool.poetry]
name = "allennlp-dataframe-mapper"
version = "0.0.0" # using poetry-dynamic-versioning
license = "MIT"
readme = "README.md"
description = ""
homepage = "https://github.com/shunk031/allennlp-dataframe-mapper"
repository = "https://github.com/shunk031/allennlp-dataframe-mapper"
authors = ["Shunsuke KITADA <shunsuke.kitada.0831@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
allennlp = "^1.0.0"
sklearn-pandas = "^2.0.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
isort = "^5.6.4"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
