[tool.poetry]
name = "allennlp-dataframe-mapper"
version = "0.0.0" # using poetry-dynamic-versioning
license = "MIT"
readme = "README.md"
description = ""
homepage = "https://github.com/shunk031/allennlp-dataframe-mapper"
repository = "https://github.com/shunk031/allennlp-dataframe-mapper"
authors = ["Shunsuke KITADA <shunsuke.kitada.0831@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
allennlp = ">=2.0.0"
sklearn-pandas = ">=2.0.4"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.961"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
